2026-02-18 JTC: Fixes the media query cutoffs for landscape view phones.

--- a/public/css/dapp-main.css
+++ b/public/css/dapp-main.css
@@ -1106,7 +1106,7 @@ h1, h2 {
     }
 }
 
-@media only screen and (min-height: 0px) and (max-height: 440px) {
+@media only screen and (min-height: 0px) and (max-height: 480px) {
     .connect-wallet.select-wallet-nav {
         display: inline-block;
     }
@@ -1338,7 +1338,7 @@ h1, h2 {
     }
 }
 
-@media only screen and (min-width: 480px) and (max-width: 767px) and (min-height: 441px) {
+@media only screen and (min-width: 480px) and (max-width: 767px) and (min-height: 481px) {
 
     body {
         background-repeat: no-repeat;
